--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -27,7 +27,7 @@ clone_newns: true
 clone_newpid: true
 clone_newipc: true
 clone_newuts: true
-clone_newcgroup: true
+disable_clone_newcgroup: true
 
 uidmap {
     inside_id: "65534"
@@ -118,10 +118,5 @@ mount {
     rw: false
 }
 
-cgroup_mem_max: 52428800
-cgroup_mem_mount: "/sys/fs/cgroup/memory"
-
-cgroup_pids_max: 1
-cgroup_pids_mount: "/sys/fs/cgroup/pids"
 
 iface_no_lo: true
