--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -3,9 +3,11 @@ description: "Execute Python"
 
 mode: ONCE
 hostname: "sandbox"
-cwd: "/sandbox"
+cwd: "/data"
 
-time_limit: 6
+# Logging configuration to reduce verbosity
+log_level: ERROR
+log_fd: -1
 
 keep_env: false
 envar: "LANG=en_US.UTF-8"
@@ -14,7 +16,8 @@ envar: "OPENBLAS_NUM_THREADS=1"
 envar: "MKL_NUM_THREADS=1"
 envar: "VECLIB_MAXIMUM_THREADS=1"
 envar: "NUMEXPR_NUM_THREADS=1"
-envar: "PYTHONPATH=/usr/lib/python3.8/site-packages/"
+envar: "PYTHONPATH=/usr/lib/python3/dist-packages/"
+envar: "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 envar: "PYTHONIOENCODING=utf-8:strict"
 
 keep_caps: false
@@ -27,7 +30,11 @@ clone_newns: true
 clone_newpid: true
 clone_newipc: true
 clone_newuts: true
-disable_clone_newcgroup: true
+
+# disabled when running in docker to avoid cgroup issues
+# since cgroup isolation inside Docker containers often isn't necessary - Docker already provides container isolation. 
+# This will allow nsjail to run its other security features without the cgroup dependency.
+clone_newcgroup: false
 
 uidmap {
     inside_id: "65534"
@@ -56,17 +63,10 @@ mount {
 }
 
 mount {
-    src: "/lib64"
-    dst: "/lib64"
+    src: "/data"
+    dst: "/data"
     is_bind: true
-    rw: false
-}
-
-mount {
-    src: "/sandbox"
-    dst: "/sandbox"
-    is_bind: true
-    rw: false
+    rw: true
 }
 
 mount {
@@ -84,22 +84,8 @@ mount {
 }
 
 mount {
-    src: "/usr/bin/python"
-    dst: "/usr/local/bin/python"
-    is_bind: true
-    rw: false
-}
-
-mount {
     src: "/usr/bin/python3"
-    dst: "/usr/local/bin/python3"
-    is_bind: true
-    rw: false
-}
-
-mount {
-    src: "/usr/bin/python3.8"
-    dst: "/usr/local/bin/python3.8"
+    dst: "/usr/bin/python3"
     is_bind: true
     rw: false
 }
