--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -22,7 +22,18 @@ envar: "PYTHONIOENCODING=utf-8:strict"
 
 keep_caps: false
 
-rlimit_as: 700
+
+# 1024MB RAM limit
+rlimit_as: 1024
+
+# This setting will terminate any process that uses more than 40 seconds of CPU time, effectively protecting against:
+# - Infinite loops
+# - Denial of service attacks
+# - Resource exhaustion
+# - Malicious code execution
+# - CPU-intensive computations
+# - Slow response times
+rlimit_cpu: 40
 
 clone_newnet: true
 clone_newuser: true
