--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -33,9 +33,11 @@ rlimit_as: 1024
 # - Malicious code execution
 # - CPU-intensive computations
 # - Slow response times
-rlimit_cpu: 40
+rlimit_cpu: 30
 
-clone_newnet: true
+# This allows the sandbox to share the host's network namespace, enabling proper network connectivity
+clone_newnet: false
+
 clone_newuser: true
 clone_newns: true
 clone_newpid: true
@@ -115,5 +117,33 @@ mount {
     rw: false
 }
 
+# Network, DNS, etc.
+mount {
+    src: "/etc/resolv.conf"
+    dst: "/etc/resolv.conf"
+    is_bind: true
+    rw: false
+}
+
+mount {
+    src: "/etc/hosts"
+    dst: "/etc/hosts"
+    is_bind: true
+    rw: false
+}
+
+mount {
+    src: "/etc/nsswitch.conf"
+    dst: "/etc/nsswitch.conf"
+    is_bind: true
+    rw: false
+}
+
+mount {
+    src: "/etc/host.conf"
+    dst: "/etc/host.conf"
+    is_bind: true
+    rw: false
+}
 
 iface_no_lo: true
