--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -5,7 +5,6 @@ mode: ONCE
 hostname: "sandbox"
 cwd: "/data"
 
-# Logging configuration to reduce verbosity
 log_level: ERROR
 log_fd: -1
 
@@ -19,23 +18,14 @@ envar: "NUMEXPR_NUM_THREADS=1"
 envar: "PYTHONPATH=/usr/lib/python3/dist-packages/"
 envar: "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 envar: "PYTHONIOENCODING=utf-8:strict"
+envar: "PYTHONUNBUFFERED=1"
 
 keep_caps: false
 
-
-# 1024MB RAM limit
 rlimit_as: 1024
 
-# This setting will terminate any process that uses more than 40 seconds of CPU time, effectively protecting against:
-# - Infinite loops
-# - Denial of service attacks
-# - Resource exhaustion
-# - Malicious code execution
-# - CPU-intensive computations
-# - Slow response times
 rlimit_cpu: 30
 
-# This allows the sandbox to share the host's network namespace, enabling proper network connectivity
 clone_newnet: false
 
 clone_newuser: true
@@ -44,9 +34,6 @@ clone_newpid: true
 clone_newipc: true
 clone_newuts: true
 
-# disabled when running in docker to avoid cgroup issues
-# since cgroup isolation inside Docker containers often isn't necessary - Docker already provides container isolation. 
-# This will allow nsjail to run its other security features without the cgroup dependency.
 clone_newcgroup: false
 
 uidmap {
