⚡️ add home dir, tmp dir, adjust threads settings

--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -9,16 +9,18 @@ log_level: ERROR
 log_fd: -1
 
 keep_env: false
-envar: "LANG=en_US.UTF-8"
-envar: "OMP_NUM_THREADS=1"
-envar: "OPENBLAS_NUM_THREADS=1"
-envar: "MKL_NUM_THREADS=1"
-envar: "VECLIB_MAXIMUM_THREADS=1"
-envar: "NUMEXPR_NUM_THREADS=1"
 envar: "PYTHONPATH=/usr/lib/python3/dist-packages/"
 envar: "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+envar: "HOME=/data"
+envar: "LANG=en_US.UTF-8"
+envar: "OMP_NUM_THREADS=5"
+envar: "OPENBLAS_NUM_THREADS=5"
+envar: "MKL_NUM_THREADS=5"
+envar: "VECLIB_MAXIMUM_THREADS=5"
+envar: "NUMEXPR_NUM_THREADS=5"
+envar: "PYTHONDONTWRITEBYTECODE=true"
 envar: "PYTHONIOENCODING=utf-8:strict"
-envar: "PYTHONUNBUFFERED=1"
+envar: "PYTHONUNBUFFERED=true"
 
 keep_caps: false
 
@@ -104,7 +106,6 @@ mount {
     rw: false
 }
 
-# Network, DNS, etc.
 mount {
     src: "/etc/resolv.conf"
     dst: "/etc/resolv.conf"
@@ -131,6 +132,13 @@ mount {
     dst: "/etc/host.conf"
     is_bind: true
     rw: false
+}
+
+mount {
+  src: ""
+  dst: "/tmp"
+  fstype: "tmpfs"
+  rw: true
 }
 
 iface_no_lo: true
