--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -9,6 +9,7 @@ log_level: ERROR
 log_fd: -1
 
 keep_env: false
+
 envar: "PYTHONPATH=/usr/lib/python3/dist-packages/"
 envar: "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 envar: "HOME=/data"
@@ -21,6 +22,12 @@ envar: "NUMEXPR_NUM_THREADS=5"
 envar: "PYTHONDONTWRITEBYTECODE=true"
 envar: "PYTHONIOENCODING=utf-8:strict"
 envar: "PYTHONUNBUFFERED=true"
+envar: "TMPDIR=/tmp"
+
+envar: "WANDB_API_KEY"
+envar: "HF_DATASETS_CACHE"
+envar: "HF_HOME"
+envar: "HF_TOKEN"
 
 keep_caps: false
 
