--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -5,13 +5,12 @@ mode: ONCE
 hostname: "sandbox"
 cwd: "/data"
 
-log_level: ERROR
-log_fd: -1
+#log_level: ERROR
+#log_fd: -1
 
 keep_env: false
 
-envar: "PYTHONPATH=/usr/lib/python3/dist-packages/"
-envar: "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+envar: "PATH=/opt/adaptive/venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 envar: "HOME=/data"
 envar: "LANG=en_US.UTF-8"
 envar: "OMP_NUM_THREADS=5"
@@ -25,26 +24,25 @@ envar: "PYTHONUNBUFFERED=true"
 envar: "TMPDIR=/tmp"
 
 envar: "WANDB_API_KEY"
-envar: "HF_DATASETS_CACHE"
-envar: "HF_HOME"
 envar: "HF_TOKEN"
+
+envar: "HF_DATASETS_CACHE=/data/.cache/huggingface"
+envar: "HF_HOME=/data/.cache/huggingface"
 
 keep_caps: false
 
-rlimit_as: 1024
-
+rlimit_as: 2048
 rlimit_cpu: 30
-
-rlimit_nofile: 128
+rlimit_nofile: 1024
+rlimit_fsize: 8589934592
+rlimit_stack: 512
 
 clone_newnet: false
-
 clone_newuser: true
 clone_newns: true
 clone_newpid: true
 clone_newipc: true
 clone_newuts: true
-
 clone_newcgroup: false
 
 uidmap {
@@ -95,8 +93,8 @@ mount {
 }
 
 mount {
-    src: "/usr/bin/python3"
-    dst: "/usr/bin/python3"
+    src: "/opt/adaptive/venv"
+    dst: "/opt/adaptive/venv"
     is_bind: true
     rw: false
 }
@@ -118,13 +116,6 @@ mount {
 mount {
     src: "/etc/resolv.conf"
     dst: "/etc/resolv.conf"
-    is_bind: true
-    rw: false
-}
-
-mount {
-    src: "/etc/hosts"
-    dst: "/etc/hosts"
     is_bind: true
     rw: false
 }
