✨ limit number of running processes

--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -22,6 +22,8 @@ envar: "PYTHONDONTWRITEBYTECODE=true"
 envar: "PYTHONIOENCODING=utf-8:strict"
 envar: "PYTHONUNBUFFERED=true"
 envar: "TMPDIR=/tmp"
+envar: "VENV_PATH=/opt/adaptive/venv"
+envar: "VIRTUAL_ENV=/opt/adaptive/venv"
 
 envar: "WANDB_API_KEY"
 envar: "HF_TOKEN"
@@ -36,6 +38,7 @@ rlimit_cpu: 30
 rlimit_nofile: 1024
 rlimit_fsize: 8589934592
 rlimit_stack: 512
+rlimit_nproc: 100
 
 clone_newnet: false
 clone_newuser: true
