--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -5,8 +5,8 @@ mode: ONCE
 hostname: "sandbox"
 cwd: "/data"
 
-#log_level: ERROR
-#log_fd: -1
+log_level: ERROR
+log_fd: -1
 
 keep_env: false
 
@@ -74,6 +74,7 @@ mount {
     rw: false
 }
 
+
 mount {
     src: "/data"
     dst: "/data"
@@ -126,13 +127,6 @@ mount {
 mount {
     src: "/etc/nsswitch.conf"
     dst: "/etc/nsswitch.conf"
-    is_bind: true
-    rw: false
-}
-
-mount {
-    src: "/etc/host.conf"
-    dst: "/etc/host.conf"
     is_bind: true
     rw: false
 }
