--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -104,8 +104,8 @@ mount {
 }
 
 mount {
-    src: "/bin/sh"
-    dst: "/bin/sh"
+    src: "/lib64"
+    dst: "/lib64"
     is_bind: true
     rw: false
 }
