--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -139,3 +139,28 @@ mount {
 }
 
 iface_no_lo: true
+
+seccomp_string: "
+POLICY sandbox {
+    KILL {
+        # No filesystem mounts
+        mount, umount2, pivot_root,
+        
+        # No privilege changes
+        setuid, setgid, setresuid, setresgid,
+        
+        # System configuration
+        sethostname, setdomainname, settimeofday,
+        
+        # No debugging
+        ptrace,
+
+        # Dangerous syscalls
+        reboot, kexec_load, kexec_file_load, iopl, ioperm,
+
+        # kill other processes
+        kill,
+    }
+    DEFAULT ALLOW
+}
+"
