harden cpu, threads limit

--- a/sandbox.cfg
+++ b/sandbox.cfg
@@ -12,11 +12,17 @@ keep_env: false
 envar: "PATH=/opt/adaptive/venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 envar: "HOME=/data"
 envar: "LANG=en_US.UTF-8"
-envar: "OMP_NUM_THREADS=5"
-envar: "OPENBLAS_NUM_THREADS=5"
-envar: "MKL_NUM_THREADS=5"
-envar: "VECLIB_MAXIMUM_THREADS=5"
-envar: "NUMEXPR_NUM_THREADS=5"
+# Additional CPU limiting environment variables
+envar: "MKL_DYNAMIC=FALSE"
+envar: "BLAS_NUM_THREADS=2"
+envar: "LAPACK_NUM_THREADS=2"
+envar: "GOTO_NUM_THREADS=2"
+envar: "ATLAS_NUM_THREADS=2"
+envar: "OMP_NUM_THREADS=2"
+envar: "OPENBLAS_NUM_THREADS=2"
+envar: "MKL_NUM_THREADS=2"
+envar: "VECLIB_MAXIMUM_THREADS=2"
+envar: "NUMEXPR_NUM_THREADS=2"
 envar: "PYTHONDONTWRITEBYTECODE=true"
 envar: "PYTHONIOENCODING=utf-8:strict"
 envar: "PYTHONUNBUFFERED=true"
@@ -37,7 +43,7 @@ rlimit_cpu: 30
 rlimit_nofile: 1024
 rlimit_fsize: 8589934592
 rlimit_stack: 512
-rlimit_nproc: 100
+rlimit_nproc: 50
 
 clone_newnet: false
 clone_newuser: true
